--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>2013 Collisions with Cyclists</title>
+<title>St George's Parish Boundaries</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
@@ -13,18 +13,11 @@ body { margin: 0; padding: 0; }
 </style>
 </head>
 <body>
-<style>
-
-</style>
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
 
 <div id="map"></div>
 
-<div class="map-overlay top">
-	<div class="map-overlay-inner">
-		<h2>Frequency of 2013 Cycling Accidents in Ottawa by Intersection (1 - 3)</h2>
-		<label id="names"></label>
-		<input id="slider" type="range" min ='1' max='3' step="1" value="0">
-</div>
 
 <script src="https://d3js.org/d3.v7.min.js" charset="utf-8"></script>
 <script>
@@ -32,8 +25,8 @@ body { margin: 0; padding: 0; }
 		const map = new mapboxgl.Map({
 			container: 'map', // container ID
 			style: 'mapbox://styles/benken31/ckwmlbxhs16fj16lhu7gg8ny4', // style URL
-			center: [-75.733525, 45.376337], // starting position [lng, lat]
-			zoom: 11.12 // starting zoom
+			center: [-75.752601, 45.395499], // starting position [lng, lat]
+			zoom: 13 // starting zoom
 		});
 
 
@@ -46,13 +39,23 @@ body { margin: 0; padding: 0; }
 
 		map.addLayer({
 		'id': 'parish',
-		'type': 'polygon',
+		'type': 'fill',
 		// wonder if possible to weight the different locations less or more by accidents
 		'source': 'Bounds',
 		'source-layer': 'Parish_Bounds-7kfwm5',
+        'paint': {
+            'fill-color': '#8B0000',
+            'fill-opacity': .3
+        } 
 		});
 
 		});
+        map.addControl(
+            new MapboxGeocoder({
+                accessToken: mapboxgl.accessToken,
+                mapboxgl: mapboxgl
+            })
+        );
 </script>
 
 
